Cambios en el model de inscripciones
